# 1.8.1 

## Bug Fixes

### General

 * `Import-Carbon` fails when `-WhatIf` switch is used.
 
### INI

 * [Set-IniEntry](http://get-carbon.org/help/Set-IniEntry.html) fails when adding the first section-less setting to a file.
 
 
# 1.8.0 (7 September 2014)

## Enhancements

### General

 * The following functions now write messages with `Write-Verbose` instead of `Write-Host`. See [Write-Host Considered Harmful](http://www.jsnover.com/blog/2013/12/07/write-host-considered-harmful/).
    * [Add-GroupMember](http://get-carbon.org/help/Add-GroupMember.html)
    * [Clear-TrustedHost](http://get-carbon.org/help/Clear-TrustedHost.html)
    * [Convert-XmlFile](http://get-carbon.org/help/Convert-XmlFile.html)
    * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html)
    * [Disable-IEEnhancedSecurityConfiguration](http://get-carbon.org/help/Disable-IEEnhancedSecurityConfiguration.html)
    * [Disable-IisSecurityAuthentication](http://get-carbon.org/help/Disable-IisSecurityAuthentication.html)
    * [Disable-NtfsCompression](http://get-carbon.org/help/Disable-NtfsCompression.html)
    * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html)
    * [Enable-IEActivationPermission](http://get-carbon.org/help/Enable-IEActivationPermission.html)
    * [Enable-IisSecurityAuthentication](http://get-carbon.org/help/Enable-IisSecurityAuthentication.html)
    * [Enable-NtfsCompression](http://get-carbon.org/help/Enable-NtfsCompression.html)
    * [Grant-ComPermission](http://get-carbon.org/help/Grant-ComPermission.html)
    * [Grant-MsmqMessageQueuePermission](http://get-carbon.org/help/Grant-MsmqMessageQueuePermission.html)
    * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html)
    * [Grant-ServiceControlPermission](http://get-carbon.org/help/Grant-ServiceControlPermission.html)
    * [Install-Group](http://get-carbon.org/help/Install-Group.html)